--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Hola!</h1>
     <h3>Prueba de github pages</h3>
+
+      <h4>Luis Leonel Ordoñez Gutierrez | DI05A</h4>
 </body>
 </html>
